fixed timeline:after overflow issue

--- a/source/sass/_timeline.scss
+++ b/source/sass/_timeline.scss
@@ -2,6 +2,7 @@
   display: flex;
   padding: 0;
   position: relative;
+  overflow: hidden;
 
 
   &:before {
